WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214472
[GTK][WPE] Timeouts on WPT css/css-images ref-tests after updating WPT import
https://bugs.webkit.org/show_bug.cgi?id=214472
Summary
[GTK][WPE] Timeouts on WPT css/css-images ref-tests after updating WPT import
Carlos Alberto Lopez Perez
Reported
2020-07-17 06:32:36 PDT
On
bug 214414
the WPT css folder was updated. This caused new ref-test failures for the following tests: imported/w3c/web-platform-tests/css/css-images/normalization-conic-degenerate.html [ Timeout ] imported/w3c/web-platform-tests/css/css-images/normalization-conic.html [ Timeout ]
Attachments
Patch
(6.01 KB, patch)
2021-03-28 21:34 PDT
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2021-03-28 21:34:49 PDT
Created
attachment 424522
[details]
Patch
Diego Pino
Comment 2
2021-03-30 01:01:22 PDT
LGTM.
EWS
Comment 3
2021-03-30 01:30:51 PDT
Committed
r275200
: <
https://commits.webkit.org/r275200
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424522
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug