[GTK][WPE] Timeouts on WPT css/css-images ref-tests after updating WPT import https://bugs.webkit.org/show_bug.cgi?id=214472

Reviewed by Žan Doberšek.

Source/WebCore:

In some cases, degenerated and corner cases of grandient stops might
trigger really slow operations in Cairo due to extremely high bezier
parameters. For example, the normalization-conic-2.html triggered this
by making the conic code calculate the tangent of 90 degrees for an
interpolation stop.

This commit adds some special handling for these cases to make sure the
interpolation will be inside reasonable values.

Covered by existing tests.

* platform/graphics/cairo/GradientCairo.cpp:
(WebCore::createConic): Handle degenerated stops

LayoutTests:

* platform/glib/TestExpectations: Change expectations back to passes


git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275200 268f45cc-cd09-0410-ab3c-d52691b4dbfc
Canonical link: https://commits.webkit.org/235897@main